Fix: Company logo very small on Placement page on mobile device

--- a/index.css
+++ b/index.css
@@ -882,6 +882,10 @@ h1 {
         height: 20vh;
     }
 
+    .placement-box div {
+        width: 70%;
+        height: 20vh;
+    }
     #details {
         float: none;
         width: 100%;
